<resources>
    <string name="app_name">PlantMe</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registo"><u>Ainda não tem conta? Registe-se agora!</u></string>
    <string name="confirmPassword">Confirme a password</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camara">Camara</string>
    <string name="plantme">plantMe</string>
    <string name="log_in_state">logInState</string>
    <string name="email_sp">email</string>
    <string name="blank">Email/ Password Vazios</string>
    <string name="emailError">Email Incorreto!!</string>
    <string name="error">Ocorreu um erro na realização do login, tente novamente!</string>
    <string name="title_camera">Reconhecimento de Doenças</string>
    <string name="permission_deny_text">É necessário aceitar as permisões da câmera para utilizar esta funcionalidade!</string>
    <string name="title_activity_camera">Reconhecimento de Doenças</string>
    <string name="alertas_menu">Alertas e Lembretes</string>
    <string name="log_out">Terminar Sessão</string>
    <string name="settings">Definições</string>
    <string name="log_out_dialog">Terminar Sessão</string>
    <string name="log_out_message">Tem a certeza que pretende terminar sessão?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="title_plantacoes">Plantações</string>
    <string name="criar_plantacao">Botão para a criação de uma nova plantação</string>
    <string name="detalhes_do_produto">Detalhes do Produto</string>
    <string name="nome_comum">Nome Comum:</string>
    <string name="esp_cie">Espécie:</string>
    <string name="stock_atual">Stock Atual:</string>
    <string name="title_detalhes_plantacao">Detalhes da Zona de Plantação</string>
    <string name="title_area">Área:</string>
    <string name="plantacao_observacoes">Observações:</string>
    <string name="title_eventos_recentes">Eventos Recentes</string>
    <string name="criar_evento">Botão de criação de um evento</string>
    <string name="erro_api">Não foi possível a obtenção das plantações!</string>
    <string name="erro_pedido">Ocorreu um erro na concretização do pedido!</string>
    <string name="user_id">userid</string>
</resources>