<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_baseline_photo_camera_24"
        android:title="@string/title_camara" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_plantacoes"
        android:icon="@drawable/ic_baseline_local_florist_24"
        android:title="@string/title_plantacoes" />

    <item
        android:id="@+id/navigation_sugestoes"
        android:icon="@drawable/ic_baseline_grading_24"
        android:title="@string/title_notifications" />

</menu>