<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".ui.plantacoes.DetalhesPlantacao">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF">

        <ImageView
            android:id="@+id/det_plantacao_back"
            android:layout_width="41dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="backPlantacoes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="92dp"
            android:layout_height="91dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/det_plantacao_back"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/nome_zona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zona 1"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <TextView
            android:id="@+id/title_info_prod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/detalhes_do_produto"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/title_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nome_comum"
            android:textColor="#3C3C3C"
            app:layout_constraintStart_toStartOf="@+id/title_info_prod"
            app:layout_constraintTop_toBottomOf="@+id/title_info_prod" />

        <TextView
            android:id="@+id/title_especie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/esp_cie"
            android:textColor="#3C3C3C"
            app:layout_constraintStart_toStartOf="@+id/title_nome"
            app:layout_constraintTop_toBottomOf="@+id/title_nome" />

        <TextView
            android:id="@+id/title_stock"
            android:layout_width="59dp"
            android:layout_height="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/stock_atual"
            android:textColor="#3C3C3C"
            app:layout_constraintStart_toStartOf="@+id/title_especie"
            app:layout_constraintTop_toBottomOf="@+id/title_especie" />

        <TextView
            android:id="@+id/nome_produto"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/title_nome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_nome"
            app:layout_constraintTop_toTopOf="@+id/title_nome" />

        <TextView
            android:id="@+id/nome_especie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/title_especie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_especie"
            app:layout_constraintTop_toTopOf="@+id/title_especie" />

        <TextView
            android:id="@+id/nomeProduto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/title_stock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_stock"
            app:layout_constraintTop_toTopOf="@+id/title_stock" />

        <TextView
            android:id="@+id/title_info_zona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/title_detalhes_plantacao"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_stock" />

        <TextView
            android:id="@+id/title_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_area"
            android:textColor="#FF3C3C3C"
            app:layout_constraintStart_toStartOf="@+id/title_info_zona"
            app:layout_constraintTop_toBottomOf="@+id/title_info_zona" />

        <TextView
            android:id="@+id/title_obs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/plantacao_observacoes"
            android:textColor="#FF3C3C3C"
            app:layout_constraintStart_toStartOf="@+id/title_area"
            app:layout_constraintTop_toBottomOf="@+id/title_area" />

        <TextView
            android:id="@+id/title_eventos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_eventos_recentes"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/title_obs"
            app:layout_constraintTop_toBottomOf="@+id/title_obs" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_eventos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/adicionar_evento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:listitem="@layout/eventos_plantacao_line" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/adicionar_evento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/criar_evento"
            android:src="@drawable/ic_baseline_event_24"
            app:backgroundTint="#135102"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dp_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/title_area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_area"
            app:layout_constraintTop_toTopOf="@+id/title_area"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/observacoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/title_obs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_obs"
            app:layout_constraintTop_toTopOf="@+id/title_obs" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Tipo de Evento"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_eventos" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Data"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stock Adicionado"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>